# src/controllers/product.controller.ts
@@ -73,7 +73,7 @@ const ProductController = {
       });
   },
   getbyid: async (req: Request, res: Response) => {
-      const { id } = req.params;
+    const { id } = req.params;
 
     if (!id) return res.status(404).json({ message: "missing id field!" });
 
@@ -116,7 +116,8 @@ const ProductController = {
 
     if (!id) return res.status(404).json({ message: "missing id field!" });
     if (!name) return res.status(404).json({ message: "missing name field!" });
-    if (!price) return res.status(404).json({ message: "missing price field!" });
+    if (!price)
+      return res.status(404).json({ message: "missing price field!" });
 
     await prisma.product
       .update({
@@ -137,7 +138,46 @@ const ProductController = {
         logger.logger.error(error);
         return res.status(500).json({ message: { ...error } });
       });
-  }
+  },
+  stock: async (req: Request, res: Response) => {
+    const { id } = req.params;
+
+    const user = await prisma.user.findUnique({
+      where: {
+        id: Number(id),
+      },
+    });
+
+    if (!user) return res.status(404).json({ message: "User not found" });
+
+    const products = await prisma.product.findMany({
+      where: {
+        user: {
+          some: {
+            id: Number(id),
+          },
+        },
+      },
+    });
+
+    if (!products)
+      return res.status(404).json({ message: "No products found" });
+
+    // capturar os produtos que estão disponíveis para retirada
+
+    const pharmacytoProduct = await prisma.pharmacyProduct.findMany({
+      where: {
+        quantity: {
+          gt: 0,
+        },
+      },
+    });
+
+    if (!pharmacytoProduct)
+      return res.status(404).json({ message: "No products found" });
+
+    return res.status(200).json({ products: pharmacytoProduct });
+  },
 };
 
 export default ProductController;
